--- a/app/src/main/res/layout/fragment_top_stories_page.xml
+++ b/app/src/main/res/layout/fragment_top_stories_page.xml
@@ -4,12 +4,18 @@
     android:id="@+id/LinearLayoutManager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#B6B7B7">
+    android:background="#B6B7B7"
+    android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <TextView
+        android:id="@+id/test11"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical" />
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/test11btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="essai"/>
 
 </LinearLayout>
