--- a/app/src/main/res/layout/fragment_most_popular_page.xml
+++ b/app/src/main/res/layout/fragment_most_popular_page.xml
@@ -1,20 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipe_refresh_layout_most_popular"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Controllers.Fragments.BusinessPageFragment"
-    android:gravity="center"
-    android:background="#ADCEB7">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_most_popular"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dip"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:textColor="#fff"
-        android:textAlignment="center"
-        android:text="Onglet Most Popular de l'application MyNews"/>
+        android:scrollbars="vertical"/>
 
-</LinearLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
