--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -1,21 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="100dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="100dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:id="@+id/article_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/article_image"
-            android:layout_width="100dip"
-            android:layout_height="100dip"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
+        <android.support.v7.widget.CardView
+            android:id="@+id/article_card_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:padding="4dp"
-            android:contentDescription="Article image" />
+            android:layout_margin="5dp"
+            app:cardCornerRadius="2dp"
+            app:cardElevation="0dp">
+
+            <ImageView
+                android:id="@+id/article_image"
+                android:layout_width="100dip"
+                android:layout_height="100dip"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:contentDescription="Article image" />
+
+        </android.support.v7.widget.CardView>
+
 
         <TextView
             android:id="@+id/article_Title"
@@ -23,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginStart="10dp"
-            android:layout_toEndOf="@+id/article_image"
+            android:layout_toEndOf="@+id/article_card_view"
             android:text="Section"
             android:textSize="14sp"
             android:textStyle="bold"/>
@@ -47,7 +59,7 @@
             android:layout_marginStart="5dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="5dp"
-            android:layout_toEndOf="@id/article_image"
+            android:layout_toEndOf="@id/article_card_view"
             android:maxLines="2"
             android:text="Summary..."
             android:textSize="16sp"
