--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:titleTextColor="@android:color/white"
-        android:background="#5E6FFF"/>
+        android:background="@color/colorBase"/>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/activity_main_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#5E6FFF"
+        android:background="@color/colorBase"
         app:tabIndicatorColor="@color/colorPrimary"
         app:tabTextColor="#D4E0F8"
         app:tabSelectedTextColor="#fff"/>
