--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -1,76 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="100dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
-        android:id="@+id/article_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+<android.support.v7.widget.CardView android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginStart="5dp"
+    android:layout_marginEnd="5dp"
+    android:layout_marginTop="2dp"
+    android:layout_marginBottom="2dp"
+    app:cardCornerRadius="10dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/article_card_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="4dp"
-            android:layout_margin="5dp"
-            app:cardCornerRadius="2dp"
-            app:cardElevation="0dp">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#EAEAEA">
 
-            <ImageView
-                android:id="@+id/article_image"
-                android:layout_width="100dip"
-                android:layout_height="100dip"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:contentDescription="Article image" />
+            <android.support.v7.widget.CardView
+                android:id="@+id/article_card_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="4dp"
+                android:layout_margin="5dp"
+                app:cardCornerRadius="10dp"
+                app:cardElevation="0dp">
 
-        </android.support.v7.widget.CardView>
+                <ImageView
+                    android:id="@+id/article_image"
+                    android:layout_width="100dip"
+                    android:layout_height="100dip"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:contentDescription="Article image" />
+
+            </android.support.v7.widget.CardView>
 
 
-        <TextView
-            android:id="@+id/article_Title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_toEndOf="@+id/article_card_view"
-            android:text="Section"
-            android:textSize="14sp"
-            android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/article_Title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_toEndOf="@+id/article_card_view"
+                android:text="Section"
+                android:textSize="14sp"
+                android:textStyle="bold"/>
 
-        <TextView
-            android:id="@+id/article_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/article_Title"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="10dp"
-            android:text="Date"
-            android:textSize="14sp"/>
+            <TextView
+                android:id="@+id/article_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/article_Title"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="10dp"
+                android:text="Date"
+                android:textSize="14sp"/>
 
-        <TextView
-            android:id="@+id/article_summary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/article_Title"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="5dp"
-            android:layout_toEndOf="@id/article_card_view"
-            android:maxLines="2"
-            android:text="Summary..."
-            android:textSize="16sp"
-            android:textAlignment="center"
-            android:textColor="@android:color/darker_gray"/>
+            <TextView
+                android:id="@+id/article_summary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/article_Title"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="5dp"
+                android:layout_toEndOf="@id/article_card_view"
+                android:maxLines="2"
+                android:text="Summary..."
+                android:textSize="16sp"
+                android:textAlignment="center"
+                android:textColor="@android:color/darker_gray"/>
+        </RelativeLayout>
 
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:background="@android:color/darker_gray" />
-
-    </RelativeLayout>
-
-</LinearLayout>
+</android.support.v7.widget.CardView>
