--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,20 +6,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/activity_main_toolbar"
-        android:minHeight="?attr/actionBarSize"
+    <include
+        layout="@layout/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:titleTextColor="@android:color/white"
-        android:background="@color/colorBase"/>
+        android:layout_height="wrap_content"/>
 
     <android.support.design.widget.TabLayout
         android:id="@+id/activity_main_tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorBase"
-        app:tabIndicatorColor="@color/colorPrimary"
+        android:background="@color/colorPrimary"
+        app:tabIndicatorColor="@color/colorOrange"
         app:tabTextColor="#D4E0F8"
         app:tabSelectedTextColor="#fff"/>
 
