--- a/app/src/main/res/layout/activity_notifications.xml
+++ b/app/src/main/res/layout/activity_notifications.xml
@@ -6,14 +6,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Controllers.Activities.NotificationsActivity">
 
-    <android.support.v7.widget.Toolbar
+    <include
+        layout="@layout/toolbar"
         android:id="@+id/toolbar"
-        app:title="Notifications"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorBase"
-        android:minHeight="?attr/actionBarSize"
-        app:titleTextColor="@android:color/white" />
+        android:layout_height="wrap_content"/>
 
     <EditText
         android:id="@+id/edt_query"
@@ -21,8 +18,9 @@
         android:layout_height="wrap_content"
         android:hint="Search query term"
         android:inputType="text"
-        app:layout_constraintEnd_toEndOf="@id/guideline_95"
+        android:layout_marginTop="15dp"
         app:layout_constraintStart_toEndOf="@id/guideline_5"
+        app:layout_constraintEnd_toEndOf="@id/guideline_95"
         app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
     <include
@@ -30,17 +28,29 @@
         android:id="@+id/include"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edt_query" />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        android:layout_marginTop="15dp"
+        app:layout_constraintStart_toStartOf="@id/guideline_5"
+        app:layout_constraintEnd_toStartOf="@id/guideline_95"
+        app:layout_constraintTop_toBottomOf="@id/include"/>
 
     <Switch
         android:id="@+id/switch_enable_notifications"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Enable notifications (once per day)"
-        android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/include"
+        android:layout_marginTop="15dp"
+        android:textSize="16sp"
+        android:textColor="#4B4C4C"
+        app:layout_constraintTop_toBottomOf="@id/divider"
         app:layout_constraintStart_toEndOf="@id/guideline_5"
         app:layout_constraintEnd_toStartOf="@id/guideline_95"/>
 
