--- a/app/src/main/res/layout/activity_search_articles.xml
+++ b/app/src/main/res/layout/activity_search_articles.xml
@@ -4,18 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
+    <include
+        layout="@layout/toolbar"
         android:id="@+id/toolbar"
-        app:title="Search Articles"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorBase"
-        android:minHeight="?attr/actionBarSize"
-        app:titleTextColor="@android:color/white" />
+        android:layout_height="wrap_content"/>
 
     <EditText
         android:id="@+id/edt_query"
-        android:theme="@style/EditTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Search query term"
@@ -38,7 +34,6 @@
 
     <EditText
         android:id="@+id/edt_date_begin"
-        android:theme="@style/EditTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:inputType="date"
@@ -59,7 +54,6 @@
 
     <EditText
         android:id="@+id/edt_date_end"
-        android:theme="@style/EditTextStyle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:inputType="date"
@@ -83,7 +77,7 @@
         android:text="SEARCH"
         android:textSize="17sp"
         android:textColor="#ffffff"
-        android:backgroundTint="@color/colorBase"
+        android:backgroundTint="@color/colorPrimary"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@id/include"
         app:layout_constraintStart_toEndOf="@id/guideline_5"
