--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="@null"
+    android:layout_marginBottom="12dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
@@ -20,11 +22,11 @@
 
             <ImageView
                 android:id="@+id/article_image"
-                android:layout_width="100dip"
-                android:layout_height="100dip"
+                android:layout_width="130dip"
+                android:layout_height="130dip"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
                 android:contentDescription="Article image" />
 
         </android.support.v7.widget.CardView>
@@ -58,22 +60,16 @@
             android:layout_below="@+id/article_section"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="5dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="5dp"
             android:layout_toEndOf="@id/article_card_view"
             android:maxLines="3"
             android:text="Summary..."
-            android:textSize="16sp"
+            android:textStyle="italic"
+            android:textSize="18sp"
             android:textAlignment="center"
-            android:textColor="@android:color/darker_gray"/>
-
-        <View
-            android:id="@+id/article_divider"
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:background="@android:color/darker_gray"
-            android:layout_alignStart="@+id/article_title"/>
+            android:textColor="#8C8C8C"/>
 
     </RelativeLayout>
 
-</LinearLayout>
+</android.support.v7.widget.CardView>
