--- a/app/src/main/res/layout/recycler_view_item.xml
+++ b/app/src/main/res/layout/recycler_view_item.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    android:id="@+id/card_view_article"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="@null"
@@ -59,9 +61,10 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/article_section"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="5dp"
+            android:paddingStart="10dp"
+            android:paddingTop="20dp"
+            android:paddingBottom="30dp"
+            android:paddingEnd="10dp"
             android:layout_toEndOf="@id/article_card_view"
             android:maxLines="3"
             android:text="Summary..."
