--- a/app/src/main/res/layout/activity_search_articles.xml
+++ b/app/src/main/res/layout/activity_search_articles.xml
@@ -32,11 +32,13 @@
         app:layout_constraintStart_toEndOf="@id/guideline_5"
         app:layout_constraintTop_toBottomOf="@+id/edt_query" />
 
-    <EditText
-        android:id="@+id/edt_date_begin"
+    <TextView
+        android:id="@+id/txt_choose_date_begin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:inputType="date"
+        android:layout_marginTop="10dp"
+        android:textSize="18sp"
+        android:hint="Choose begin date"
         app:layout_constraintEnd_toEndOf="@id/guideline_475"
         app:layout_constraintStart_toEndOf="@id/guideline_5"
         app:layout_constraintTop_toBottomOf="@+id/txt_date_begin" />
@@ -52,11 +54,13 @@
         app:layout_constraintStart_toEndOf="@id/guideline_525"
         app:layout_constraintTop_toBottomOf="@+id/edt_query" />
 
-    <EditText
-        android:id="@+id/edt_date_end"
+    <TextView
+        android:id="@+id/txt_choose_date_end"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:inputType="date"
+        android:layout_marginTop="10dp"
+        android:textSize="18sp"
+        android:hint="Choose end date"
         app:layout_constraintEnd_toEndOf="@id/guideline_95"
         app:layout_constraintStart_toEndOf="@id/guideline_525"
         app:layout_constraintTop_toBottomOf="@+id/txt_date_end" />
@@ -68,7 +72,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edt_date_end" />
+        app:layout_constraintTop_toBottomOf="@id/txt_choose_date_begin" />
 
     <Button
         android:id="@+id/btn_search"
